syntax = "proto3";

option csharp_namespace = "Price.Service.ProtoClass";

package Price;

service PriceService {
  rpc GetPriceListByCityId (GrpcInt) returns (PriceListResponse);
  rpc GetPriceByCityVersion (GrpcTwoInt) returns (PriceResponse);
  rpc GetAvgPriceByVersionId (GrpcInt) returns (GrpcString);
}

//=========================Request-=============================

message GrpcInt
{
  int32 value = 1;
}

message GrpcTwoInt
{
  int32 cityId = 1;
  int32 versionId = 2;
}

//=========================Response-=============================

message PriceListResponse {
  repeated PriceResponse price = 1;
}

message PriceResponse {
  int32 id = 1;
  int32 versionId = 2;
  int32 cityId = 3;
  string value = 4;
}

message GrpcString {
  string value = 1;
}

